fixed header on mobile

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -104,3 +104,9 @@
     display: flex;
   }
 }
+
+@media (max-width: 500px) {
+  .title {
+    font-size: 42px;
+  }
+}
